--- a/index.html
+++ b/index.html
@@ -11,11 +11,10 @@
   <!-- Bootstrap -->
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
   <!-- 通用js和css -->
-  <script type="text/javascript" src="encrypt1.js" charset="utf-8"></script>
+  <script type="text/javascript" src="part1.js" charset="utf-8"></script>
 </head>
 <body>
   <script type="text/javascript">
-    //console.log(getEncryption('sunwin', 'salt', 'sdfasdfaswx'));
   </script>
 </body>
 </html>
