change some files

--- a/index.html
+++ b/index.html
@@ -42,9 +42,9 @@
   };
 
   var vipinfo_base = {
-    vip_level: 'vip等级',
+    vip_level: 'vip等级', //done
     u: 'QQ号',
-    is_vip: '是否VIP用户'
+    is_vip: '是否VIP用户' //done
   };
   //frend bare info
   var friends = data.result.friends;
