--- a/index.html
+++ b/index.html
@@ -46,46 +46,47 @@
     u: 'QQ号',
     is_vip: '是否VIP用户' //done
   };
-  //frend bare info
-  var friends = data.result.friends;
-  //some details
-  var infos = data.result.info;
-  //remark of friend's real name
-  var marknames = data.result.marknames;
-  //vip info
-  var vipinfos = data.result.vipinfo;
-  //categories info
-  var categories = data.result.categories;
-  var myfriends = {};
-  var mycategories = {};
+    var friends = data.result.friends;
+    var infos = data.result.info;
+    var marknames = data.result.marknames;
+    var vipinfos = data.result.vipinfo;
+    var categories = data.result.categories;
+    var myfriends = {};
+    var mycategories = {};
+    var keys = [];
+    var myfriends_arr = [];
 
-  for (var category_id in categories) {
-    mycategories[categories[category_id].index] = categories[category_id]['name'];
-  }
+    for (var category_id in categories) {
+      mycategories[categories[category_id].index] = categories[category_id]['name'];
+    }
 
-  for (var friend_id in friends) {
-    var friend = friends[friend_id];
-    myfriends[friend.uin] = {
-      qq: friend.uin,
-      category: mycategories[friend.categories]
-    };
-  }
+    for (var friend_id in friends) {
+      var friend = friends[friend_id];
+      myfriends[friend.uin] = {
+        'QQ号': friend.uin,
+        '分组': mycategories[friend.categories]
+      };
+    }
 
-  for (var info_id in infos) {
-    var info = infos[info_id];
-    myfriends[info.uin]['nickname'] = info.nick;
-  }
+    for (var info_id in infos) {
+      var info = infos[info_id];
+      myfriends[info.uin]['昵称'] = info.nick;
+    }
 
-  for (var markname_id in marknames) {
-    var markname = marknames[markname_id];
-    myfriends[markname.uin]['realname'] = markname.markname;
-  }
+    for (var markname_id in marknames) {
+      var markname = marknames[markname_id];
+      myfriends[markname.uin]['备注名'] = markname.markname;
+    }
 
-  for (var vipinfo_id in vipinfos) {
-    var vipinfo = vipinfos[vipinfo_id];
-    myfriends[vipinfo.u]['is_vip'] = vipinfo.is_vip;
-    myfriends[vipinfo.u]['vip_level'] = vipinfo.vip_level;
-  }
+    for (var vipinfo_id in vipinfos) {
+      var vipinfo = vipinfos[vipinfo_id];
+      myfriends[vipinfo.u]['是否VIP'] = vipinfo.is_vip;
+      myfriends[vipinfo.u]['VIP等级'] = vipinfo.vip_level;
+    }
+
+    for (var key_id in myfriends) {
+      myfriends_arr.push(myfriends[key_id]);
+    }
 
   </script>
 </body>
